fixed the menu display to only display brunch on load.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Getting Started</title>
     <script src = "index.js" defer></script>
-    <script src="main.js" defer></script>
+    <script src="./dist/main.js" defer></script>
     <link rel="stylesheet" href="../style.css">
   </head>
   <body>
@@ -80,7 +80,7 @@
         <div id= "faq"class = "tabcontent">
           <div id = "faqContainer">
           <div id= "slideShow">
-            <img class = "mainPhoto" src = "../images/faq1.jpg" >
+            <img class = "mainPhoto" src = "../images/faq1.png" >
           </div>
           <div id = "nav" class="nav">
             <div id = "option" onclick = 'jump("aboutUs")'>ABOUT US </div>
@@ -132,7 +132,7 @@
                   <div id= "option" class = "menuLinks" onclick = 'openMenu(event,"coffeeMenu")'>COFFEE/TEA </div>
                 </div>
                 <div id= "explanations">
-                  <div id = "brunchMenu" class="menuOptions">
+                  <div id = "brunchMenu" class="menuOptions" >
                     <div id = "brunchSelection">
                     <h1 id="brunch">BRUNCH</h1>
                     <div id="menuItem">
@@ -449,7 +449,7 @@
            <!-- PRIVATE EVENTS--> 
            <div id= "privateevents"class = "tabcontent">
             <div id= "slideShow">
-              <img class = "mainPhoto" src = "../images/privateevents2.jpg" >
+              <img class = "mainPhoto" src = "../images/privateevents2.png" >
             </div>
             <div id = "eventContent">
               <h1 id = "privateEvents">Private Events</h1>
