changed image tags, hg pages couldn't find the folder

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
       <!--home-->
       <div id = "home" class = "tabcontent">
       <div id= "slideShow">
-        <img class = "mainPhoto" src = "../images/bkgnd.png"    id = "paella">
+        <img class = "mainPhoto" src = "./images/bkgnd.png"    id = "paella">
       </div>
       <div id = "locations">
-          <div id = "graphic"> <img src = "../images/Zebra2.svg" ></div>
+          <div id = "graphic"> <img src = "./images/Zebra2.svg" ></div>
           <div id = "location1">
               <h1>Montjuïc</h1>
               <p id = "address">Carrer de Margarit 85, Barcelona 08004</p>
@@ -80,7 +80,7 @@
         <div id= "faq"class = "tabcontent">
           <div id = "faqContainer">
           <div id= "slideShow">
-            <img class = "mainPhoto" src = "../images/faq1.png" >
+            <img class = "mainPhoto" src = "./images/faq1.png" >
           </div>
           <div id = "nav" class="nav">
             <div id = "option" onclick = 'jump("aboutUs")'>ABOUT US </div>
@@ -120,7 +120,7 @@
           <div id= "menus"class = "tabcontent">
             <div id = "menusContainer">
               <div id= "slideShow">
-                <img class = "mainPhoto" src = "../images/menu1.png"    >
+                <img class = "mainPhoto" src = "./images/menu1.png"    >
               </div>
                 <div id = "nav" class= "nav">
                   <div id= "option" class = "menuLinks" onclick = 'openMenu(event,"brunchMenu")'>BRUNCH </div>
@@ -449,7 +449,7 @@
            <!-- PRIVATE EVENTS--> 
            <div id= "privateevents"class = "tabcontent">
             <div id= "slideShow">
-              <img class = "mainPhoto" src = "../images/privateevents2.png" >
+              <img class = "mainPhoto" src = "./images/privateevents2.png" >
             </div>
             <div id = "eventContent">
               <h1 id = "privateEvents">Private Events</h1>
@@ -494,14 +494,14 @@
     <div id = "footer">
                 <div id = "banner"> 
                   <div id = "icons">
-                    <p><a href= "https://www.facebook.com/" target="_blank"><img src = "../images/fb.svg" ></a></p>
-                  <p><a href = "https://www.instagram.com/" target="_blank"> <img src = "../images/instagram.svg"></a></p>
-                  <p><a href = "https://www.spotify.com/" target="_blank"><img src = "../images/spotify.svg"></a></p>
+                    <p><a href= "https://www.facebook.com/" target="_blank"><img src = "./images/fb.svg" ></a></p>
+                  <p><a href = "https://www.instagram.com/" target="_blank"> <img src = "./images/instagram.svg"></a></p>
+                  <p><a href = "https://www.spotify.com/" target="_blank"><img src = "./images/spotify.svg"></a></p>
                   </div>
                   <div id = "banner-address" onclick= ""><a target="_blank" href = " https://www.google.com/maps/dir/41.3907372,2.1745004/Montju%C3%AFc+Park/@41.3802703,2.1473562,14z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x12a4a345edc4bd0f:0x4145c88af7bc5784!2m2!1d2.1618564!2d41.3693754">CARRER DE MARGARIT 85, BARCELONA 08004</a> </div>
                   <button class = "email">EMAIL SIGNUP</button>
               </div>
-                <div id = "github">Created By Sophia Lanzendorf <img src = "../images/github.svg"></div>
+                <div id = "github">Created By Sophia Lanzendorf <img src = "./images/github.svg"></div>
     </div>
               
 
