--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Getting Started</title>
     <script src = "index.js" defer></script>
     <script src="./dist/main.js" defer></script>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id = "content">
